# multi_agents_system

./: README.md  pyproject.toml
src/app/: main.py  main1.py
