[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mubashir Saeed", email = "mubashirsono942@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents[litellm]>=0.0.15",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
